--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "jest"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tylercaceres/npm-db-mass-seed"
+  },
   "author": "Tyler Caceres",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "multiple-faker": "^0.1.4"
+  }
 }
