--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "author": "Tyler Caceres",
   "license": "ISC",
   "dependencies": {
-    "multiple-faker": "^0.1.4"
+    "faker": "^4.1.0"
   }
 }
