--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Tyler Caceres",
   "license": "ISC",
   "dependencies": {
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "jest": "^24.9.0"
   }
 }
