--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "author": "Tyler Caceres",
   "license": "ISC",
   "dependencies": {
-    "faker": "^4.1.0",
+    "faker": "^4.1.0"
+  },
+  "devDependencies": {
     "jest": "^24.9.0"
   }
 }
